version/0.64/_sources/getting_started/learning.rst.txt


================
Learning PyMAPDL
================

Ansys has prepared multiple resources to help you to learn and use PyMAPDL.
You can access them from the website `Ansys Learning Resources <learning_resources_>`_.
In this page, you can find a summary of the available resources for MAPDL and PyMAPDL.




Downloads
===========

- You can try the Student Version of Ansys products in
  `Ansys Student Versions <ansys_student_version_>`_.
  These are versions valid during a year and with limited capabilities 
  regarding number of nodes, elements, etc.

- View and download `PyMAPDL cheatsheet <pymapdl_cheatsheet_>` to help
  you to learn PyMAPDL.

- Visit :ref:`ref_examples` to learn how PyMAPDL can be
  used to solve different real problems.


Courses
==============

Ansys has prepared high quality courses to guide you through the learning process.


Intro to Python
---------------

The `Intro to Python <course_intro_python_>`_ course teaches you
the basis of the Python programming language.


Course content
~~~~~~~~~~~~~~

* Prerequisites - Installation of Python
* Fundamentals of Python - Lesson 1
* Analyzing Radiance Data - Lesson 2
* Repeating Actions with Loops - Lesson 3
* Storing Multiple Values in Lists - Lesson 4
* Making Choices - Lesson 5
* Analyzing Data from Multiple Files - Lesson 6
* Creating Functions - Lesson 7
* Defensive Programming - Lesson 8
* Debugging - Lesson 9
* Command Line Programs - Lesson 10
* Post Completion Survey
* Meet the Instructor



Getting Started with PyMAPDL
----------------------------

The `Getting Started with PyMAPDL <course_getting_started_pymapdl_>`_ course teaches
you about PyMAPDL, the Pythonic way to access Ansys MAPDL. 

Course content
~~~~~~~~~~~~~~

* Overview of PyMAPDL - Lesson 1
* PyMAPDL Language and Usage - Lesson 2
* PyMAPDL Categories - Lesson 3
* Getting Help - Lesson 4
* Post Completion Survey
* Meet the Instructors



Intro to Ansys Mechanical APDL Scripting
----------------------------------------

The `Intro to Ansys Mechanical APDL Scripting <course_intro_apdl_>`_
course teaches you how APDL, the Mechanical solver syntax language, works.

Course content
~~~~~~~~~~~~~~

* Overview of MAPDL (Lesson 1)
* Basics of APDL Language (Lesson 2)
* Solid Modeling & Meshing (Lesson 3)
* Defining Loads, BCs, and Solver Controls (Lesson 4)
* General Postprocessing (Lesson 5)
* Selection Logic (Lesson 6)
* More on Parameters (Arrays, \*GET) (Lesson 7)
* Post Completion Survey
* Meet the Instructors


Recommended links
=================

* PADT Inc.'s `Using Ansys Scripting with pyMAPDL, pyDPF-Post, and More - PART 1: Running and Post-Processing an Ansys Model Outside <padt_post_>`_
* `Ansys Innovation Courses <ansys_innovation_space_>`_

Feel free to email any educational or learning resource to `PyAnsys Support <pyansys_support_>`_.